--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -119,7 +119,7 @@ About Us
                     {'img': '11.webp', 'title': 'Haryana Di Shaan Award', 'desc': 'Excellence in Customer Satisfaction'}
                 ] %}
 
-                <div class="owl-carousel owl-theme" id="awards">
+                <div class="owl-carousel owl-theme" id="award">
                     {% for award in awards %}
                         <div class="item">
                             <div class="card border-0 shadow-sm h-100 text-center p-3">
